// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Search: Results renders correctly 1`] = `
<div
  className="result"
>
  <h3>
    <a
      href="https://example.com"
    >
      Test title
    </a>
  </h3>
  <div />
</div>
`;

exports[`Components : Search: Results renders correctly 2`] = `
<div
  className="result"
>
  <h3>
    <a
      href="https://example.com"
    >
      Test title
    </a>
  </h3>
  <div>
    <p>
      A child
    </p>
  </div>
</div>
`;

exports[`Components : Search: Results renders correctly 3`] = `
<div
  className="result"
>
  <h3>
    <a
      href="https://example.com"
    >
      Test title
    </a>
  </h3>
  <div />
  <div
    className="detail-text detailText"
  >
    <div
      className="resultDetails"
    >
      <span
        className="publishDate"
      >
        Updated 
        April 23, 2020
      </span>
      <span
        dangerouslySetInnerHTML={
          Object {
            "__html": " &middot; ",
          }
        }
      />
      An author
    </div>
  </div>
</div>
`;
